# detectsmith

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: detection-ci.yml
cmd/detectsmith-tui/: coverage_screen.go  dashboard.go  detectsmith_screen.go  docs_screen.go  go.mod  go.sum  main.go  model.go  pipeline_screen.go  rules_screen.go  sepulchrynscan_screen.go  settings_screen.go  styles.go  tests_screen.go  update.go  view.go
detectsmith/: __init__.py  cli.py  coverage.py  docs.py  gap_analyzer.py  lint.py  matcher.py  models.py  reporting.py  rules.py  test_runner.py  validate_cmd.py
docs/: ARCHITECTURE.md  QUALITY_MODEL.md  REPORT_SCHEMAS.md  SCOPE.md  TESTING_STRATEGY.md  TUI_ROADMAP.md
docs/plans/: 0001-detectsmith-v0.1.md
rules/linux/: proc_creation_curl_pipe_shell.yml  proc_creation_reverse_shell.yml
rules/m365/: inbox_rule_external_forwarding.yml  oauth_app_consent_grant.yml
rules/windows/: proc_creation_powershell_encoded_command.yml  proc_creation_regsvr32_scriptlet.yml  proc_creation_rundll32_javascript.yml  proc_creation_schtasks_persistence.yml  registry_run_key_persistence.yml
tests/: expected.yml
tests/fixtures/: cloudtrail_stop_negative.jsonl  cloudtrail_stop_positive.jsonl  conn_to_internal_negative.jsonl  conn_to_internal_positive.jsonl  curl_pipe_shell_negative.jsonl  curl_pipe_shell_positive.jsonl  iam_key_negative.jsonl  iam_key_positive.jsonl  inbox_forward_negative.jsonl  inbox_forward_positive.jsonl  oauth_consent_negative.jsonl  oauth_consent_positive.jsonl  powershell_encoded_negative.jsonl  (+13 more)
(+59 files in other folders)
