[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "detectsmith"
version = "0.1.0"
description = "Detection-as-code workbench for Sigma-style rules"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Detectsmith contributors" }
]
dependencies = [
  "PyYAML>=6.0.1",
  "typer>=0.12.0",
  "rich>=13.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
detectsmith = "detectsmith.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["detectsmith*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
